--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.DS_Store
-
 # Local .terraform directories
 **/.terraform/*
 
@@ -16,3 +14,27 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+site/node_modules
+site/.pnp
+.pnp.js
+
+# testing
+site/coverage
+
+# production
+site/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
