--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,15 +22,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Yarn Install
-      run: |
-        yarn install
     - name: Prod Build
       run: |
-        yarn build
+        npm run build
     - name: Unit Tests
       run: |
-        yarn test
+        npm test
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
