--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,6 +2,8 @@
 
 name: Prod build
 
+source_path: "./site"
+
 on:
   pull_request:
   push:
@@ -24,10 +26,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Prod Build
       run: |
-        npm run build
+        npm run build --prefix ${{ source_path }}
     - name: Unit Tests
       run: |
-        npm test
+        npm test --prefix ${{ source_path }}
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
