NPM install was missing

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,6 +22,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: NPM Install
+      run: |
+        npm install
     - name: Prod Build
       run: |
         npm run build --prefix ./site
