--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: NPM Install
       run: |
-        npm install
+        npm install --prefix ./site
     - name: Prod Build
       run: |
         npm run build --prefix ./site
