Invalidate Cloudfront on workflow

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -41,3 +41,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
         SOURCE_DIR: "./site/build"
+    - name: Invalidate Cloudfront
+      uses: docker://rewindio/github-action-cloudfront-invalidate
+      env:
+        DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        PATH_TO_INVALIDATE: /*
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
