--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,7 +16,8 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches: [main]
+    branches-ignore: [main]
+    # Remove the line above to run when pushing to master
   pull_request:
     branches: [main]
 
