--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -40,16 +40,14 @@ jobs:
     - name: Prod Build
       run: |
         yarn --cwd ./site build
-    - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
+    - name: "Configure AWS Credentials"
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        args: --acl public-read --delete
-      env:
-        AWS_S3_BUCKET: ${{ secrets.AWS_PRODUCTION_BUCKET_NAME }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "./site/build"
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: Sync S3 bucket
+      run: aws s3 sync build/. s3://naumanen.click
     - name: Invalidate Cloudfront
       uses: docker://rewindio/github-action-cloudfront-invalidate
       env:
