--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: site
     
     strategy:
       matrix:
@@ -43,16 +46,10 @@ jobs:
     - name: "Configure AWS Credentials"
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: Sync S3 bucket
-      run: aws s3 sync site/build/. s3://naumanen.click
-    - name: Invalidate Cloudfront
-      uses: docker://rewindio/github-action-cloudfront-invalidate
-      env:
-        DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-        PATH_TO_INVALIDATE: /*
-        AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+    - name: Sync S3 bucket
+      run: aws s3 sync build/. s3://naumanen.click
+    - name: Invalidate Cloudfront distribution cache
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
