--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -36,14 +36,14 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install project dependencies
       run: |
-        yarn --cwd ./site install --prefer-offline
+        yarn install --prefer-offline
     - name: Unit Tests
       run: |
         yarn --cwd ./site test
     - name: Prod Build
       run: |
         yarn --cwd ./site build
-    - name: "Configure AWS Credentials"
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
