--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -19,24 +19,15 @@ jobs:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - uses: actions/cache@v1
-      id: yarn-cache
-      with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        cache: yarn
     - name: Install project dependencies
       run: |
-        yarn install --prefer-offline
+        yarn install
     - name: Unit Tests
       run: |
         yarn test
