--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: yarn
+        cache-dependency-path: site/yarn.lock
     - name: Install project dependencies
       run: |
         yarn install
