--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ override.tf.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+**/**/node_modules
 site/node_modules
 site/.pnp
 .pnp.js
@@ -27,6 +28,7 @@ site/coverage
 
 # production
 site/build
+**/*/dist
 
 # misc
 .DS_Store
