--- a/site/common/tsconfig.json
+++ b/site/common/tsconfig.json
@@ -4,7 +4,10 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "./dist",
+      "typeRoots": [
+        "./node_modules/@types"
+      ]
     },
     "include": ["**/*.ts"],
-    "exclude": ["node_modules/**/*"]
+    "exclude": ["node_modules/**/*", "dist"]
   }
