--- a/site/common/package.json
+++ b/site/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "common",
+  "name": "@naumanenclick/common",
   "version": "0.1.0",
   "private": true,
   "description": "Common module for common stuff",
