--- a/site/package.json
+++ b/site/package.json
@@ -1,48 +1,19 @@
 {
-  "name": "site",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.12",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "common": "file:./common",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.0",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
-  },
+  "name": "@naumanenclick/site",
+  "workspaces": [
+    "common",
+    "client"
+  ],
   "scripts": {
-    "build:common": "yarn --cwd ./common/ build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "client": "yarn workspace @naumanenclick/client start",
+    "start": "concurrently \"yarn client\" \"yarn build-common\"",
+
+    "build-common": "yarn workspace @naumanenclick/common build",
+    "build-client": "yarn workspace @naumanenclick/client build",
+    "build": "concurrently \"yarn build-client\" \"yarn build-common\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "standard": "^16.0.4"
+  "dependencies": {
+    "concurrently": "^7.0.0"
   }
 }
