--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,5 +1,4 @@
 ---
-
 name: Prod build
 
 on:
@@ -13,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: site
+        working-directory: site/client
     
     strategy:
       matrix:
