--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: site/client
+        working-directory: site
     
     strategy:
       matrix:
@@ -39,6 +39,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Sync S3 bucket
-        run: aws s3 sync build/. s3://naumanen.click
+        run: aws s3 sync site/client/build/. s3://naumanen.click
       - name: Invalidate Cloudfront distribution cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths '/*'
