--- a/site/package.json
+++ b/site/package.json
@@ -3,17 +3,28 @@
   "name": "@naumanenclick/site",
   "workspaces": [
     "common",
-    "client"
+    "client",
+    "api-client"
   ],
   "scripts": {
     "client": "yarn workspace @naumanenclick/client start",
     "start": "concurrently \"yarn client\" \"yarn build-common\"",
+    "start-api": "yarn workspace @naumanenclick/api-client start",
     "test": "yarn workspace @naumanenclick/client test",
     "build-common": "yarn workspace @naumanenclick/common build",
     "build-client": "yarn workspace @naumanenclick/client build",
-    "build": "concurrently \"yarn build-client\" \"yarn build-common\""
+    "build-api-client": "yarn workspace @naumanenclick/api-client build",
+    "build": "concurrently \"yarn build-client\" \"yarn build-common\"",
+    "build-api": "concurrently \"yarn build-api-client\""
   },
   "dependencies": {
-    "concurrently": "^7.0.0"
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "concurrently": "^7.0.0",
+    "express": "^4.17.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.5.0"
   }
 }
